<resources>
    <string name="app_name">Mi nuevo parqueadero</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="tipo_vehiculos">Tipo vehículo</string>
    <string name="sin_tipo_vehiculos">No existen tipos de vehículos en el sistema</string>
    <string name="escriba_nombre">Escribir Tipo vehículo</string>
    <string name="escriba_precio">Escribir un precio</string>
    <string name="guardar">Guardar</string>
    <string name="requerido">Requerido</string>
    <string name="satisfactorio">La información se guardó satisfactoriamente</string>
    <string name="placa">Placa</string>
    <string name="ingreso">Ingreso</string>
    <string name="salida">Salida</string>
    <string name="configurar_tipo_vehiculo">Debe configurar los tipos de vehiculos inicialmente</string>
    <string name="item_seleccione">Seleccione</string>
    <string name="tipo_vehiculo_requerido">El tipo de vehículo es requerido</string>
    <string name="informacion_alamacenada_satisfactoriamente">La información se almacenó exitosamente</string>
    <string name="yes_value_button">SI</string>
    <string name="no_value_button">No</string>
    <string name="confirm_message_guardar">¿Deseas guardar la información?</string>
    <string name="confirm">Confirmar</string>
    <string name="tipo_vehiculo_lb">Tipo vehículo</string>
    <string name="tiempoLb">Tiempo (hrs)</string>
    <string name="valorPagarLb">Valor a Pagar:</string>
</resources>
