<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_maestro">

    <fragment
        android:id="@+id/nav_maestro"
        android:name="co.com.k4soft.minuevoparqueadero.menu.ui.maestro.MaestroFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_maestro" />

    <fragment
        android:id="@+id/nav_movimiento"
        android:name="co.com.k4soft.minuevoparqueadero.menu.ui.movimiento.MovimientoFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_movimiento" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="co.com.k4soft.minuevoparqueadero.menu.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="co.com.k4soft.minuevoparqueadero.menu.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="co.com.k4soft.minuevoparqueadero.menu.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="co.com.k4soft.minuevoparqueadero.menu.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>